# falconeri

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.build  Justfile  README.md  deny.toml  justfile  lefthook.yml
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: ci.yml
examples/word-frequencies/: Dockerfile  Justfile  Justfile.gcs  README.md  justfile  justfile.gcs  word-frequencies.gcs.json  word-frequencies.s3.json
examples/word-frequencies-gcs/: justfile
falconeri/: Cargo.toml
falconeri-worker/: Cargo.toml
falconeri-worker/src/: main.rs
falconeri/src/: description.rs  main.rs
falconeri/src/cmd/: db.rs  deploy.rs  deploy_manifest.yml.hbs  migrate.rs  mod.rs  proxy.rs  schema.rs  secret_manifest.yml.hbs
falconeri/src/cmd/datum/: describe.rs  mod.rs
falconeri/src/cmd/job/: describe.rs  list.rs  mod.rs  retry.rs  run.rs  schema.rs  wait.rs
falconeri_common/: Cargo.toml
falconeri_common/src/: connect_via.rs  db.rs  kubernetes.rs  lib.rs  pipeline.rs  rest_api.rs  secret.rs
falconeri_common/src/models/: datum.rs  input_file.rs  job.rs  mod.rs  output_file.rs
falconeri_common/src/storage/: gs.rs  mod.rs  s3.rs
falconerid/: Cargo.toml
falconerid/src/: babysitter.rs  inputs.rs  job_manifest.yml.hbs  main.rs  start_job.rs  util.rs
guide/: book.toml  template.typ
guide/src/: SUMMARY.md  images.md  installation.md  introduction.md  job-lifecycle.md  local.md  rest-api.md  specification.md
guide/src/commands/: job.md
guide/src/local/: linux.md  mac.md  running.md
openapi/: README.md
plans/: DUPLICATE_DATUM_ERROR_ANALYSIS.md  HTTP_STACK_MIGRATION.md  MINIO_SUPPORT_PLAN.md  OTHER_MIGRATIONS.md  PROPOSED_DIESEL_MIGRATION.md  REST_CONVENTIONS.md
