[workspace]
members = ["falconeri", "falconerid", "falconeri-worker", "falconeri_common", "arrow-rs-object-store"]

[workspace.package]
version = "2.0.0-alpha.4"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
bytes = "1.0"
futures = "0.3"
object_store = { path = "arrow-rs-object-store", features = ["aws", "gcp", "fs"] }
serde = { version = "1.0.70", features = ["derive"] }
tokio = "1.42.0"
tracing = "0.1.29"
