[package]
name = "falconeri-worker"
version = "1.0.0-beta.12"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

license = "Apache-2.0 OR MIT"

[dependencies]
crossbeam = "0.8.1"
falconeri_common = { path = "../falconeri_common" }
glob = "0.3"
log = "0.4.3"
# Needed for ekidd/rust-musl-builder.
openssl-sys = "*"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.29"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
