[package]
name = "falconeri-worker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
falconeri_common = { path = "../falconeri_common" }
glob = "0.3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
tracing.workspace = true
