[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
name = "falconeri"
version = "1.0.0-beta.12"
edition = "2018"

license = "Apache-2.0 OR MIT"

[dependencies]
base64 = "0.22"
crossbeam = "0.8.1"
falconeri_common = { path = "../falconeri_common" }
handlebars = "6"
log = "0.4.3"
# Needed for ekidd/rust-musl-builder.
openssl-sys = "*"
prettytable-rs = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.25"
tracing = "0.1.29"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
