[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
name = "falconeri"
version = "2.0.0-alpha.0"
edition = "2018"

license = "Apache-2.0 OR MIT"

[dependencies]
base64 = "0.22"
falconeri_common = { path = "../falconeri_common" }
handlebars = "6"
log = "0.4.3"
prettytable-rs = "0.10.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tracing = "0.1.29"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
