[package]
name = "falconeri"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
falconeri_common = { path = "../falconeri_common" }
prettytable-rs = "0.10.0"
serde.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "process", "signal", "time"] }
tracing.workspace = true
