[package]
name = "falconeri_common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
async-trait = "0.1"
backon = "1"
base64 = "0.22"
cast = { version = "0.3.0", features = ["std"] }
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "2.3", features = ["chrono", "postgres_backend", "serde_json", "uuid"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool", "migrations"] }
diesel_migrations = "2.3"
futures-util = "0.3"
handlebars = "6"
humantime-serde = "1.0.1"
lazy_static = "1.0.2"
rand = "0.9"
regex = "1.0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots"] }
semver = "1.0.4"
serde.workspace = true
serde_json = "1.0"
tokio = { workspace = true, features = ["process", "io-util"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
