[package]
name = "falconeri_common"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { version = "1.0.45", features = ["backtrace"] }
async-trait = "0.1"
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.119"
aws-smithy-types = "1.3"
backon = "1"
base64 = "0.22"
cast = { version = "0.3.0", features = ["std"] }
chrono = { version = "0.4.4", features = ["serde"] }
diesel = { version = "2.3", features = ["chrono", "postgres_backend", "serde_json", "uuid"] }
diesel-async = { version = "0.7", features = ["postgres", "deadpool", "migrations"] }
diesel_migrations = "2.3"
futures-util = "0.3"
google-cloud-gax = "1.4"
google-cloud-storage = "1.5"
handlebars = "6"
humantime-serde = "1.0.1"
lazy_static = "1.0.2"
rand = "0.9"
regex = "1.0.2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
semver = "1.0.4"
serde.workspace = true
serde_json = "1.0"
tokio = { workspace = true, features = ["process", "io-util", "fs"] }
tracing.workspace = true
tracing-subscriber = { version = "0.3.2", features = ["env-filter"] }
url = "2.2.2"
uuid = { version = "1.3.3", features = ["serde", "v4"] }
walkdir = "2"
schemars = "1.1.0"
utoipa = { version = "5.4.0", features = ["chrono", "uuid"] }
