[package]
name = "falconerid"
version = "1.0.0-beta.12"
authors = ["Eric Kidd <git@randomhacks.net>"]
edition = "2018"

license = "Apache-2.0 OR MIT"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
falconeri_common = { path = "../falconeri_common" }
futures-util = "0.3"
http = "1"
num_cpus = "1"
# Needed for ekidd/rust-musl-builder.
openssl-sys = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.29"


