[package]
name = "falconerid"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.8", features = ["macros"] }
falconeri_common = { path = "../falconeri_common" }
http = "1"
serde.workspace = true
serde_yaml = "0.9"
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "limit"] }
tracing.workspace = true
